--- a/package.json
+++ b/package.json
@@ -10,8 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/bottom-tabs": "^7.0.7",
+    "@react-navigation/elements": "^2.1.1",
+    "@react-navigation/material-top-tabs": "^7.0.7",
+    "@react-navigation/native": "^7.0.4",
+    "@react-navigation/native-stack": "^7.1.1",
+    "@react-navigation/stack": "^7.0.6",
     "react": "18.2.0",
-    "react-native": "0.74.6"
+    "react-native": "0.74.6",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-pager-view": "^6.5.1",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.3.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
