--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@react-navigation/stack": "^7.0.6",
     "react": "18.2.0",
     "react-native": "0.74.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.5.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.3.0",
+    "react-native-svg": "^15.9.0",
     "react-native-tab-view": "^4.0.3",
     "react-native-vector-icons": "^10.2.0"
   },
