--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.0.7",
     "@react-navigation/elements": "^2.1.1",
@@ -25,6 +26,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.5.1",
     "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-root-toast": "^3.6.0",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.3.0",
     "react-native-svg": "^15.9.0",
